# hls-downloader

./: .gitignore  DESIGN.md  LICENSE  PRIVACY.md  README.md  build_frontend.ps1  config.json  requirements-build.txt  run_backend.ps1  run_frontend.ps1  start.cmd
backend/: desktop.py  native_host.py  requirements.txt  run_core.py  run_server.py
desktop-compose/: LEGACY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
docs/: architecture.md  releasing.md
extension/: AMO-BUILD.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  wxt.config.ts
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
installer/: hls-downloader.nsi
scripts/: build_installer.ps1  generate_icon.py  register-native-host.ps1  shutdown-running.ps1  smoke_native_host.py
tests/: test_api_and_config.py  test_browser_integration.py  test_checksum.py  test_desktop_runtime.py  test_download_errors.py  test_duplicate_create.py  test_github_workflows.py  test_hls_io.py  test_merge_progress.py  test_multi_protocol.py  test_naming.py  test_native_desktop.py  test_packaging_paths.py  test_parser_advanced.py  test_playback.py  test_playback_seek.py  test_queue_scheduler.py  test_request_context.py  test_runtime_paths.py  test_task_manager_lifecycle.py  test_throttle.py  test_tvbox.py  test_updater.py  test_url_recognition.py  test_userscript_service.py  test_userscript_support.py
userscript/: m3u8-sniffer.user.js
(+168 files in other folders)
